Fixed font size issue on mobile stylesheet

--- a/css/index.css
+++ b/css/index.css
@@ -239,7 +239,7 @@ footer {
   }
 
   #homepage #programmer-button, #homepage #journalist-button {
-    font-size: 1.5em;
+    font-size: 1em;
   }
 
   #homepage #right-box #written-work .for-more {
